feat: google drive implementation

--- a/TelegramCards/TelegramCards.csproj
+++ b/TelegramCards/TelegramCards.csproj
@@ -7,13 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Google.Apis.Auth" Version="1.69.0" />
+        <PackageReference Include="Google.Apis.Drive.v3" Version="1.69.0.3703" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Services\Implementations\" />
     </ItemGroup>
 
 </Project>
