--- a/TelegramCards/appsettings.json
+++ b/TelegramCards/appsettings.json
@@ -11,5 +11,13 @@
   },
   "CardSettings": {
     "GenerateLengthStack": 100
+  },
+  "RarityDistribution": {
+    "Base": 50.0,
+    "Rare": 35.0,
+    "Epic": 10.0,
+    "Legendary": 5.0
   }
 }
+
+
